@@ -1,4 +1,4 @@
-/*	$NetBSD: pfkey.c,v 1.10 2006/09/09 16:22:09 manu Exp $	*/
+/*	$NetBSD: pfkey.c,v 1.11 2006/09/21 09:42:08 vanhu Exp $	*/
 
 /*	$KAME: pfkey.c,v 1.47 2003/10/02 19:52:12 itojun Exp $	*/
 
@@ -1250,9 +1250,9 @@ pfkey_send_migrate(so, src, prefs, dst, prefd, proto, policy, policylen, seq)
 	/* create new sadb_msg to reply. */
 	len = sizeof(struct sadb_msg)
 		+ sizeof(struct sadb_address)
-		+ PFKEY_ALIGN8(src->sa_len)
+		+ PFKEY_ALIGN8(sysdep_sa_len(src))
 		+ sizeof(struct sadb_address)
-		+ PFKEY_ALIGN8(src->sa_len)
+		+ PFKEY_ALIGN8(sysdep_sa_len(dst))
 		+ policylen;
 
 	if ((newmsg = CALLOC(len, struct sadb_msg *)) == NULL) {
